[gd_scene load_steps=8 format=3 uid="uid://drw2rqaexm74a"]

[ext_resource type="Script" path="res://castle.gd" id="1_328ku"]
[ext_resource type="PackedScene" uid="uid://b73x1w3nhjlou" path="res://health_component.tscn" id="2_hotyk"]
[ext_resource type="Texture2D" uid="uid://dfixkg6jeqp2h" path="res://OSR Castle.png" id="3_t0rvw"]
[ext_resource type="Texture2D" uid="uid://cyf0b53wd6efk" path="res://OSR_light.png" id="4_oomxo"]
[ext_resource type="AudioStream" uid="uid://b3n4s3gdlpxha" path="res://OSR_audio/OSR_hitplayer.mp3" id="5_1y08a"]
[ext_resource type="AudioStream" uid="uid://bxq1eiyxkbmfe" path="res://OSR_audio/OSR_castledown.mp3" id="5_dd0g8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_824rm"]
radius = 22.1359

[node name="castle" type="StaticBody2D" node_paths=PackedStringArray("health_component")]
scale = Vector2(1.2, 1.2)
script = ExtResource("1_328ku")
health_component = NodePath("health component")

[node name="Area2D" type="Area2D" parent="." groups=["hittable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_824rm")

[node name="health component" parent="." instance=ExtResource("2_hotyk")]

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(1.815, 1.815)
texture = ExtResource("3_t0rvw")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("4_oomxo")
texture_scale = 0.6

[node name="hit_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1y08a")
bus = &"SFX"

[node name="death_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dd0g8")
bus = &"SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
